tests/dataset/tpc-ds/compiler/c/q93.c
// Generated by Mochi compiler v0.10.26 on 2025-07-15T06:30:49Z
// Generated by Mochi compiler v0.10.26 on 2025-07-15T06:30:49Z
#include <stdio.h>
#include <stdlib.h>
#include <string.h>

typedef struct {
  int len;
  int *data;
} list_int;
static list_int list_int_create(int len) {
  list_int l;
  l.len = len;
  l.data = calloc(len, sizeof(int));
  if (!l.data && len > 0) {
    fprintf(stderr, "alloc failed\n");
    exit(1);
  }
  return l;
}
typedef struct {
  int len;
  double *data;
} list_float;
static list_float list_float_create(int len) {
  list_float l;
  l.len = len;
  l.data = calloc(len, sizeof(double));
  if (!l.data && len > 0) {
    fprintf(stderr, "alloc failed\n");
    exit(1);
  }
  return l;
}
typedef struct {
  int len;
  char **data;
} list_string;
static list_string list_string_create(int len) {
  list_string l;
  l.len = len;
  l.data = calloc(len, sizeof(char *));
  if (!l.data && len > 0) {
    fprintf(stderr, "alloc failed\n");
    exit(1);
  }
  return l;
}
typedef struct {
  int len;
  list_int *data;
} list_list_int;
static list_list_int list_list_int_create(int len) {
  list_list_int l;
  l.len = len;
  l.data = calloc(len, sizeof(list_int));
  if (!l.data && len > 0) {
    fprintf(stderr, "alloc failed\n");
    exit(1);
  }
  return l;
}
static double _sum_float(list_float v) {
  double sum = 0;
  for (int i = 0; i < v.len; i++)
    sum += v.data[i];
  return sum;
}
static void _json_int(int v) { printf("%d", v); }
static void _json_float(double v) { printf("%g", v); }
static void _json_string(char *s) { printf("\"%s\"", s); }
static void _json_list_int(list_int v) {
  printf("[");
  for (int i = 0; i < v.len; i++) {
    if (i > 0)
      printf(",");
    _json_int(v.data[i]);
  }
  printf("]");
}
static void _json_list_float(list_float v) {
  printf("[");
  for (int i = 0; i < v.len; i++) {
    if (i > 0)
      printf(",");
    _json_float(v.data[i]);
  }
  printf("]");
}
static void _json_list_string(list_string v) {
  printf("[");
  for (int i = 0; i < v.len; i++) {
    if (i > 0)
      printf(",");
    _json_string(v.data[i]);
  }
  printf("]");
}
static void _json_list_list_int(list_list_int v) {
  printf("[");
  for (int i = 0; i < v.len; i++) {
    if (i > 0)
      printf(",");
    _json_list_int(v.data[i]);
  }
  printf("]");
}
typedef struct {
  int key;
  list_int items;
} _GroupInt;
typedef struct {
  int len;
  int cap;
  _GroupInt *data;
} list_group_int;
static list_group_int _group_by_int(list_int src) {
  list_group_int res;
  res.len = 0;
  res.cap = 0;
  res.data = NULL;
  for (int i = 0; i < src.len; i++) {
    int key = src.data[i];
    int idx = -1;
    for (int j = 0; j < res.len; j++)
      if (res.data[j].key == key) {
        idx = j;
        break;
      }
    if (idx == -1) {
      if (res.len >= res.cap) {
        res.cap = res.cap ? res.cap * 2 : 4;
        res.data = (_GroupInt *)realloc(res.data, sizeof(_GroupInt) * res.cap);
      }
      res.data[res.len].key = key;
      res.data[res.len].items = list_int_create(0);
      idx = res.len++;
    }
    _GroupInt *g = &res.data[idx];
    g->items.data =
        (int *)realloc(g->items.data, sizeof(int) * (g->items.len + 1));
    g->items.data[g->items.len++] = src.data[i];
  }
  return res;
}
typedef struct StoreSale StoreSale;
typedef struct StoreReturn StoreReturn;
typedef struct Reason Reason;

typedef struct {
  int ss_customer_sk;
  double sumsales;
} tmp1_t;
typedef struct {
  int len;
  tmp1_t *data;
} tmp1_list_t;
tmp1_list_t create_tmp1_list(int len) {
  tmp1_list_t l;
  l.len = len;
  l.data = calloc(len, sizeof(tmp1_t));
  if (!l.data && len > 0) {
    fprintf(stderr, "alloc failed\n");
    exit(1);
  }
  return l;
}

typedef struct {
  int ss_customer_sk;
  double sumsales;
} tmp_item_t;
typedef struct {
  int len;
  tmp_item_t *data;
} tmp_item_list_t;
tmp_item_list_t create_tmp_item_list(int len) {
  tmp_item_list_t l;
  l.len = len;
  l.data = calloc(len, sizeof(tmp_item_t));
  if (!l.data && len > 0) {
    fprintf(stderr, "alloc failed\n");
    exit(1);
  }
  return l;
}

typedef struct {
  int ss_item_sk;
  int ss_ticket_number;
  int ss_customer_sk;
  int ss_quantity;
  double ss_sales_price;
} store_sale_t;

typedef struct {
  int sr_item_sk;
  int sr_ticket_number;
  int sr_reason_sk;
  int sr_return_quantity;
} store_return_t;

typedef struct {
  int r_reason_sk;
  const char *r_reason_desc;
} reason_t;

typedef struct {
  int ss_customer_sk;
  double act_sales;
} t_item_t;
typedef struct {
  int len;
  t_item_t *data;
} t_item_list_t;
t_item_list_t create_t_item_list(int len) {
  t_item_list_t l;
  l.len = len;
  l.data = calloc(len, sizeof(t_item_t));
  if (!l.data && len > 0) {
    fprintf(stderr, "alloc failed\n");
    exit(1);
  }
  return l;
}

typedef struct {
  int ss_customer_sk;
  double sumsales;
} result_item_t;
typedef struct {
  int len;
  result_item_t *data;
} result_item_list_t;
result_item_list_t create_result_item_list(int len) {
  result_item_list_t l;
  l.len = len;
  l.data = calloc(len, sizeof(result_item_t));
  if (!l.data && len > 0) {
    fprintf(stderr, "alloc failed\n");
    exit(1);
  }
  return l;
}

typedef struct StoreSale {
  int ss_item_sk;
  int ss_ticket_number;
  int ss_customer_sk;
  int ss_quantity;
  double ss_sales_price;
} StoreSale;
typedef struct {
  int len;
  store_sale_t *data;
} store_sale_list_t;
store_sale_list_t create_store_sale_list(int len) {
  store_sale_list_t l;
  l.len = len;
  l.data = calloc(len, sizeof(store_sale_t));
  if (!l.data && len > 0) {
    fprintf(stderr, "alloc failed\n");
    exit(1);
  }
  return l;
}

typedef struct StoreReturn {
  int sr_item_sk;
  int sr_ticket_number;
  int sr_reason_sk;
  int sr_return_quantity;
} StoreReturn;
typedef struct {
  int len;
  store_return_t *data;
} store_return_list_t;
store_return_list_t create_store_return_list(int len) {
  store_return_list_t l;
  l.len = len;
  l.data = calloc(len, sizeof(store_return_t));
  if (!l.data && len > 0) {
    fprintf(stderr, "alloc failed\n");
    exit(1);
  }
  return l;
}

typedef struct Reason {
  int r_reason_sk;
  char *r_reason_desc;
} Reason;
typedef struct {
  int len;
  reason_t *data;
} reason_list_t;
reason_list_t create_reason_list(int len) {
  reason_list_t l;
  l.len = len;
  l.data = calloc(len, sizeof(reason_t));
  if (!l.data && len > 0) {
    fprintf(stderr, "alloc failed\n");
    exit(1);
  }
  return l;
}

static list_int test_TPCDS_Q93_active_sales_result;
static void test_TPCDS_Q93_active_sales() {
  tmp1_t tmp1[] = {(tmp1_t){.ss_customer_sk = 1, .sumsales = 40.0},
                   (tmp_item_t){.ss_customer_sk = 2, .sumsales = 60.0}};
  int tmp1_len = sizeof(tmp1) / sizeof(tmp1[0]);
  int tmp2 = 1;
  if (test_TPCDS_Q93_active_sales_result.len != tmp1.len) {
    tmp2 = 0;
  } else {
    for (int i3 = 0; i3 < test_TPCDS_Q93_active_sales_result.len; i3++) {
      if (test_TPCDS_Q93_active_sales_result.data[i3] != tmp1.data[i3]) {
        tmp2 = 0;
        break;
      }
    }
  }
  if (!(tmp2)) {
    fprintf(stderr, "expect failed\n");
    exit(1);
  }
}

int main() {
  store_sale_t store_sales[] = {(store_sale_t){.ss_item_sk = 1,
                                               .ss_ticket_number = 1,
                                               .ss_customer_sk = 1,
                                               .ss_quantity = 5,
                                               .ss_sales_price = 10.0},
                                (store_sale_t){.ss_item_sk = 1,
                                               .ss_ticket_number = 2,
                                               .ss_customer_sk = 2,
                                               .ss_quantity = 3,
                                               .ss_sales_price = 20.0}};
  int store_sales_len = sizeof(store_sales) / sizeof(store_sales[0]);
  store_return_t store_returns[] = {(store_return_t){.sr_item_sk = 1,
                                                     .sr_ticket_number = 1,
                                                     .sr_reason_sk = 1,
                                                     .sr_return_quantity = 1}};
  int store_returns_len = sizeof(store_returns) / sizeof(store_returns[0]);
  reason_t reason[] = {
      (reason_t){.r_reason_sk = 1, .r_reason_desc = "ReasonA"}};
  int reason_len = sizeof(reason) / sizeof(reason[0]);
  t_item_list_t tmp4 =
      t_item_list_t_create(store_sales.len * store_returns.len * reason.len);
  int tmp5 = 0;
  for (int tmp6 = 0; tmp6 < store_sales_len; tmp6++) {
    store_sale_t ss = store_sales[tmp6];
    int tmp8 = 0;
    for (int tmp7 = 0; tmp7 < store_returns_len; tmp7++) {
      store_return_t sr = store_returns[tmp7];
      if (!(ss.ss_item_sk == sr.sr_item_sk &&
            ss.ss_ticket_number == sr.sr_ticket_number)) {
        continue;
      }
      tmp8 = 1;
      int tmp10 = 0;
      for (int tmp9 = 0; tmp9 < reason_len; tmp9++) {
        reason_t r = reason[tmp9];
        if (!(sr != 0 && sr.sr_reason_sk == r.r_reason_sk)) {
          continue;
        }
        tmp10 = 1;
        if (!(r == 0 || r.r_reason_desc == "ReasonA")) {
          continue;
        }
        tmp4.data[tmp5] = (t_item_t){
            .ss_customer_sk = ss.ss_customer_sk,
            .act_sales = ((sr != 0) ? (ss.ss_quantity - sr.sr_return_quantity) *
                                          ss.ss_sales_price
                                    : ss.ss_quantity * ss.ss_sales_price)};
        tmp5++;
      }
      if (!tmp10) {
        reason_t r = (reason_t){0};
        if (!(r == 0 || r.r_reason_desc == "ReasonA")) {
        } else {
        }
        tmp4.data[tmp5] = (t_item_t){
            .ss_customer_sk = ss.ss_customer_sk,
            .act_sales = ((sr != 0) ? (ss.ss_quantity - sr.sr_return_quantity) *
                                          ss.ss_sales_price
                                    : ss.ss_quantity * ss.ss_sales_price)};
        tmp5++;
      }
    }
    if (!tmp8) {
      store_return_t sr = (store_return_t){0};
      int tmp12 = 0;
      for (int tmp11 = 0; tmp11 < reason_len; tmp11++) {
        reason_t r = reason[tmp11];
        if (!(sr != 0 && sr.sr_reason_sk == r.r_reason_sk)) {
          continue;
        }
        tmp12 = 1;
        if (!(r == 0 || r.r_reason_desc == "ReasonA")) {
          continue;
        }
        tmp4.data[tmp5] = (t_item_t){
            .ss_customer_sk = ss.ss_customer_sk,
            .act_sales = ((sr != 0) ? (ss.ss_quantity - sr.sr_return_quantity) *
                                          ss.ss_sales_price
                                    : ss.ss_quantity * ss.ss_sales_price)};
        tmp5++;
      }
      if (!tmp12) {
        reason_t r = (reason_t){0};
        if (!(r == 0 || r.r_reason_desc == "ReasonA")) {
        } else {
        }
        tmp4.data[tmp5] = (t_item_t){
            .ss_customer_sk = ss.ss_customer_sk,
            .act_sales = ((sr != 0) ? (ss.ss_quantity - sr.sr_return_quantity) *
                                          ss.ss_sales_price
                                    : ss.ss_quantity * ss.ss_sales_price)};
        tmp5++;
      }
    }
  }
  tmp4.len = tmp5;
  t_item_list_t t = tmp4;
  t_item_list_t tmp13 = create_t_item_list(t.len);
  int tmp14_data[t.len];
  list_int tmp14 = {0, tmp14_data};
  int tmp15 = 0;
  for (int i16 = 0; i16 < t.len; i16++) {
    t_item_t x = t.data[i16];
    tmp13.data[tmp15] = x;
    tmp14.data[tmp15] = x.ss_customer_sk;
    tmp15++;
  }
  tmp13.len = tmp15;
  tmp14.len = tmp15;
  list_group_int tmp17 = _group_by_int(tmp14);
  result_item_list_t tmp18 = result_item_list_t_create(tmp17.len);
  int *tmp20 = (int *)malloc(sizeof(int) * tmp17.len);
  int tmp19 = 0;
  for (int gi = 0; gi < tmp17.len; gi++) {
    _GroupInt _gp = tmp17.data[gi];
    t_item_list_t tmp21 = t_item_list_t_create(_gp.items.len);
    for (int i22 = 0; i22 < _gp.items.len; i22++) {
      tmp21.data[i22] = tmp13.data[_gp.items.data[i22]];
    }
    tmp21.len = _gp.items.len;
    struct {
      int key;
      t_item_list_t items;
    } g = {_gp.key, tmp21};
    list_float tmp23 = list_float_create(g.items.len);
    int tmp24 = 0;
    for (int i25 = 0; i25 < g.items.len; i25++) {
      t_item_t y = g.items.data[i25];
      tmp23.data[tmp24] = y.act_sales;
      tmp24++;
    }
    tmp23.len = tmp24;
    tmp18.data[tmp19] =
        (result_item_t){.ss_customer_sk = g.key, .sumsales = _sum_float(tmp23)};
    list_float tmp26 = list_float_create(g.items.len);
    int tmp27 = 0;
    for (int i28 = 0; i28 < g.items.len; i28++) {
      t_item_t y = g.items.data[i28];
      tmp26.data[tmp27] = y.act_sales;
      tmp27++;
    }
    tmp26.len = tmp27;
    list_float result = list_float_create(2);
    result.data[0] = _sum_float(tmp26);
    result.data[1] = g.key;
    tmp20[tmp19] = result;
    tmp19++;
  }
  tmp18.len = tmp19;
  for (int i31 = 0; i31 < tmp19 - 1; i31++) {
    for (int i32 = i31 + 1; i32 < tmp19; i32++) {
      if (tmp20[i31] > tmp20[i32]) {
        int tmp29 = tmp20[i31];
        tmp20[i31] = tmp20[i32];
        tmp20[i32] = tmp29;
        result_item_t tmp30 = tmp18.data[i31];
        tmp18.data[i31] = tmp18.data[i32];
        tmp18.data[i32] = tmp30;
      }
    }
  }
  result_item_list_t result = tmp18;
  printf("[");
  for (int i33 = 0; i33 < result.len; i33++) {
    if (i33 > 0)
      printf(",");
    result_item_t it = result.data[i33];
    printf("{");
    _json_string("ss_customer_sk");
    printf(":");
    _json_int(it.ss_customer_sk);
    printf(",");
    _json_string("sumsales");
    printf(":");
    _json_float(it.sumsales);
    printf("}");
  }
  printf("]");
  test_TPCDS_Q93_active_sales_result = result;
  test_TPCDS_Q93_active_sales();
  return 0;
}
